# celestial-tts

./: .containerignore  .gitignore  CLAUDE.md  Containerfile  LICENSE  README.md  create_token.py  main.py  pyproject.toml  runpod_handler.py
.github/workflows/: publish-container.yml  tests.yml
.runpod/: hub.json  tests.json
celestial_tts/: __init__.py  config.py  injectors.py  middleware.py
celestial_tts/config/: __init__.py  bootstrap.py  database.py  logging.py  models.py
celestial_tts/database/: __init__.py  utils.py
celestial_tts/database/controller/: auth_token.py  custom_speaker.py
celestial_tts/database/model/: auth_token.py  custom_speaker.py
celestial_tts/model/: __init__.py
celestial_tts/model/local/: __init__.py  batcher.py  factory.py  model_cache.py
celestial_tts/model/local/qwen/: clone.py  custom.py  design.py  preset.py
celestial_tts/model/remote/: __init__.py
celestial_tts/model/types/: __init__.py
celestial_tts/routes/: auth.py  generate.py  health.py  openai_speech.py  speakers.py
scripts/: bump_version.nu  debug_config.py  docker-compose.test.yml  download_models.py  healthcheck.sh  release.nu  test_config_local.py  test_runpod_local.sh
tests/: test_openai_client.py
tests/hurl/: test_generate.hurl  test_openai_speech.hurl  test_speakers.hurl  vars.env.example
