[project]
name = "celestial-tts"
version = "0.7.0"
description = "A Text-to-Speech (TTS) multi-lingual and multi-provider REST API microservice for generating speech from text."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "flash-attn>=2.8.3",
    "huggingface-hub>=0.36.0",
    "hypercorn>=0.18.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "qwen-tts>=0.0.4",
    "safetensors>=0.7.0",
    "soundfile>=0.13.1",
    "sqlmodel>=0.0.31",
    "tomli-w>=1.2.0",
    "torch>=2.10.0",
    "typer>=0.21.1",
    "uuid-utils>=0.14.0",
]

[project.optional-dependencies]
test = [
    "openai>=1.59.7",
    "pytest>=8.3.4",
]
runpod = [
    "runpod>=1.7.0",
]

[project.scripts]
celestial-tts = "main:cli_app"
celestial-tts-create-token = "create_token:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
